# SudokuAppandAutoSolver

./: .gitignore  CMakeLists.txt  InputTable.cpp  InputTable.h  InputWindow.cpp  InputWindow.h  README.md  SedokuTable.cpp  SedokuTable.h  SedokuTableTests.cpp  SudokuTable.cpp  SudokuTable.h  SudokuTableTests.cpp  WFC.cpp  WFC.h  WaveFunctionCollapse.cpp  WaveFunctionCollapse.h  main.cpp  testing.cpp  testing.h
TestCaseFiles/: SudokuTableValidFileInvalidMapTest.txt  SudokuTableValidFileValidMapTest.txt  SudokuTableValidSaveFileEmptyTable.txt  SudokuTableValidSaveFilePopulatedTable.txt
tables/: .gitignore  temp.txt
testCaseFiles/: SudokuTableValidFileInvalidMapTest.txt
